--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@leafygreen-ui/button": "^21.3.0",
+    "@leafygreen-ui/button": "^23.0.0",
+    "@leafygreen-ui/icon": "^13.1.2",
+    "@leafygreen-ui/modal": "^17.0.3",
+    "@leafygreen-ui/tabs": "^14.1.2",
+    "@leafygreen-ui/tooltip": "^13.0.4",
+    "@leafygreen-ui/typography": "^20.1.1",
+    "axios": "^1.7.7",
     "geist": "^1.3.1",
-    "mongodb": "^6.10.0",
-    "next": "15.0.2",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028"
+    "next": "15.0.1",
+    "react": "19.0.0-rc-69d4b800-20241021",
+    "react-dom": "19.0.0-rc-69d4b800-20241021"
   }
 }
