--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@leafygreen-ui/badge": "^9.0.6",
     "@leafygreen-ui/button": "^23.1.3",
     "@leafygreen-ui/card": "^12.0.2",
     "@leafygreen-ui/code": "^16.0.5",
