--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,10 @@ services:
       no_cache: true
       dockerfile: Dockerfile.backend
     image: insurance-agentic-backend:latest
+    volumes:
+      - ~/.aws/credentials:/root/.aws/credentials:ro
+      - ~/.aws/config:/root/.aws/config:ro
+      - ~/.aws/sso/cache:/root/.aws/sso/cache:rw  # Only make cache writable
     ports:
       - "8000:8000"
     restart: always
@@ -16,6 +20,6 @@ services:
       dockerfile: Dockerfile.frontend
     image: insurance-agentic-frontend:latest
     ports:
-      - "8000:8000"
+      - "3000:3000"
     restart: always
     container_name: insurance-agentic-frontend
